--- a/securitywarrior/app/templates/app/index.html
+++ b/securitywarrior/app/templates/app/index.html
@@ -4,8 +4,8 @@
         {% load static %}
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="Mi proyectito" />
+        <meta name="author" content="Uri Badillo" />
         <title>Servicios Samurai Security</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="{% static 'assets/favicon.ico' %}" />
@@ -23,7 +23,7 @@
             <!-- Navigation-->
             <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
                 <div class="container px-5">
-                    <a class="navbar-brand" href=""><span class="fw-bolder text-primary">Samurai Security INC.</span></a>
+                    <a class="navbar-brand" href="{% url 'home' %}"><span class="fw-bolder text-primary">Samurai Security INC.</span></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
@@ -179,6 +179,7 @@
             </header>
             {% endblock principal %}
             <!-- About Section-->
+            {% block content %}
             <section class="bg-light py-5">
                 <div class="container px-5">
                     <div class="row gx-5 justify-content-center">
@@ -196,7 +197,8 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> 
+            {% endblock content %}
         </main>
         <!-- Footer-->
         <footer class="bg-white py-4 mt-auto">
