--- a/securitywarrior/app/templates/app/appliance.html
+++ b/securitywarrior/app/templates/app/appliance.html
@@ -18,22 +18,12 @@
 {% block content %}
 <div class="container">
     <div class="row">
-      <!-- Formulario -->
       <div class="col-md-6">
-        <form>
-          <div class="mb-3">
-            <label for="compania" class="form-label">Compañía</label>
-            <input type="text" class="form-control" id="compania" name="compania">
-          </div>
-          <div class="mb-3">
-            <label for="costo" class="form-label">Costo</label>
-            <input type="number" class="form-control" id="costo" name="costo">
-          </div>
-          <div class="mb-3">
-            <label for="licencia" class="form-label">Licencia</label>
-            <input type="text" class="form-control" id="licencia" name="licencia">
-          </div>
-          <button type="submit" class="btn btn-primary">Enviar</button>
+        <form action="" method="post">
+        <table>
+          {{ form.as_table }}
+        </table>
+        <button type="submit" class="btn btn-primary">Guardar en BD</button>
         </form>
       </div>
 <div class="col-md-6">
@@ -59,5 +49,3 @@
   </table>
 </div>
 {% endblock content %}
-
-
