--- a/securitywarrior/app/templates/app/appliance.html
+++ b/securitywarrior/app/templates/app/appliance.html
@@ -17,16 +17,6 @@
 
 {% block content %}
 <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <form action="" method="post">
-        <table>
-          {{ form.as_table }}
-        </table>
-        <button type="submit" class="btn btn-primary">Guardar en BD</button>
-        </form>
-      </div>
-<div class="col-md-6">
 <table class="table table-striped">
     <thead>
     <tr>
@@ -40,7 +30,7 @@
         {% for c in appliance %}
     <tr>
       <td>{{ c.id}}</td>
-      <td>{{ c.compañia}}</td>
+      <td>{{ c.compania}}</td>
       <td>{{ c.costo}}</td>
       <td>{{ c.licencia}}</td>
     </tr>
