--- a/securitywarrior/app/templates/app/cursos.html
+++ b/securitywarrior/app/templates/app/cursos.html
@@ -8,10 +8,36 @@
           <div class="badge bg-gradient-primary-to-secondary text-white mb-4">
             <div class="text-uppercase">Confidencialidad · Integridad · Disponibilidad</div>
           </div>
-          <div class="fs-3 fw-bold text-muted">Te ofrecemos nuestros capacitaciones por expertos especializados en el area</div>
+          <div class="fs-3 fw-bold text-muted">Te ofrecemos los mejores cursos</div>
         </div>
       </div>
     </div>
   </div>
 {% endblock principal %}
 
+{% block content %}
+<div class="container">
+<table class="table table-striped">
+    <thead>
+    <tr>
+     <th>ID</th>
+      <th>Nombre</th>
+      <th>Costo</th>
+      <th>Tiempo</th>
+      <th>Descripcion</th>
+    </tr>
+    </thead>
+    <tbody>
+        {% for c in cursos %}
+    <tr>
+      <td>{{ c.id}}</td>
+      <td>{{ c.nombre}}</td>
+      <td>{{ c.costo}}</td>
+      <td>{{ c.tiempo}}</td>
+      <td>{{ c.descripcion}}</td>
+    </tr>
+    {% endfor %}
+    </tbody>
+  </table>
+</div>
+{% endblock content %}
