Feature: Proyecto en fase final v1

--- a/securitywarrior/app/templates/app/servicios.html
+++ b/securitywarrior/app/templates/app/servicios.html
@@ -27,7 +27,7 @@
     </tr>
     </thead>
     <tbody>
-        {% for c in servicios %}
+        {% for c in servicitoo %}
     <tr>
       <td>{{ c.id}}</td>
       <td>{{ c.nombre}}</td>
