--- a/securitywarrior/app/templates/app/cursos.html
+++ b/securitywarrior/app/templates/app/cursos.html
@@ -28,7 +28,7 @@
     </tr>
     </thead>
     <tbody>
-        {% for c in cursos %}
+        {% for c in cursitoss %}
     <tr>
       <td>{{ c.id}}</td>
       <td>{{ c.nombre}}</td>
