--- a/securitywarrior/app/templates/app/eventos.html
+++ b/securitywarrior/app/templates/app/eventos.html
@@ -28,7 +28,7 @@
     </tr>
     </thead>
     <tbody>
-        {% for c in eventos %}
+        {% for c in eventitos %}
     <tr>
       <td>{{ c.id}}</td>
       <td>{{ c.nombre}}</td>
